feat: add log in error cases and modify error response
