# internal/handlers/tax/calculations.go
@@ -34,6 +34,10 @@ type CalculationsResponse struct {
 	TaxRefund *float64 `json:"taxRefund,omitempty"`
 }
 
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
 // Calculations calculates the tax based on total income, withholding tax (WHT), and allowances.
 //
 //	@summary		Calculate Tax
@@ -43,28 +47,33 @@ type CalculationsResponse struct {
 //	@produce		json
 //	@param			request	body		CalculationsRequest		true	"Input request for tax calculation"
 //	@success		200		{object}	CalculationsResponse	"Successfully calculated tax and returns the tax details"
-//	@failure		400		"Bad request if the input validation fails"
+//	@failure		400		{object}	ErrorResponse			"Bad request if the input validation fails"
+//	@failure		500		{object}	ErrorResponse			"Internal server error if the tax calculations service fails"
 //	@router			/tax/calculations [post]
 func (h *handler) Calculations(c api.Context) error {
 	ctx, cancel := context.WithTimeout(context.Background(), 3*time.Second)
 	defer cancel()
 
+	if c.Request().Body == http.NoBody {
+		return c.JSON(http.StatusBadRequest, toErrorResponse(ErrInvalidRequest))
+	}
+
 	var req CalculationsRequest
 	if err := c.Bind(&req); err != nil {
 		h.log.Err(err).E("Failed to bind request")
-		return c.JSON(http.StatusBadRequest, ErrInvalidRequest)
+		return c.JSON(http.StatusBadRequest, toErrorResponse(ErrInvalidRequest))
 	}
 
 	if err := c.Validate(&req); err != nil {
 		h.log.Err(err).Fields(logger.Fields{"request": req}).E("Failed to validate request")
-		return c.JSON(http.StatusBadRequest, ErrInvalidRequest)
+		return c.JSON(http.StatusBadRequest, toErrorResponse(ErrInvalidRequest))
 	}
 
 	res, err := h.tax.Calculate(ctx, req.toServiceRequest())
 	if err != nil {
 		h.log.Err(err).E("Failed to calculate tax")
-		return c.JSON(http.StatusInternalServerError, ErrCalculateTax)
+		return c.JSON(http.StatusInternalServerError, toErrorResponse(ErrCalculateTax))
 	}
 
-	return c.JSON(http.StatusOK, toResponse(*res))
+	return c.JSON(http.StatusOK, toCalculationsResponse(*res))
 }
